Refactor test structure + add more tests